deploy/k3s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nestlancer-frontend
  labels:
    app.kubernetes.io/part-of: nestlancer-frontend
